Tue Jun 22 20:35:36 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* templates/automake.mpd (AUTOMAKE_OPTIONS):

	  Removed this make variable.  All Automake options should
	  generally be set via the AM_INIT_AUTOMAKE autoconf macro in the
	  application's `configure.ac' file.

	  (pkginclude_HEADERS):

	  Corrected make variable for template files.
	  "$(INLINE_FILES)" -> "$(TEMPLATE_FILES)".

Tue Jun 15 07:02:12 2004  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:
        * modules/Options.pm:

          Updated the usage information to provide more details on using the
          -base option.

        * modules/ProjectCreator.pm:

          We need to ensure that macros only get expanded to environment
          variables when converting source file, header file, etc. related
          macros.  Thanks to Phil Mesnier <mesnier_p@ociweb.com> for
          reporting this.

Thu Jun 10 08:33:08 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Driver.pm:
        * modules/Options.pm:

          Moved the usage out of the Driver and into the Options module.

        * modules/ProjectCreator.pm:
        * modules/VC6ProjectCreator.pm:

          Added support for replacing $(...) with an environment variable.
          This is not necessary for 'make' based project types and is not
          supported by Visual C++ 7 or higher.  So, it is used by the em3
          and vc6 types.

Tue Jun  8 17:14:29 2004  Steve Huston  <shuston@riverace.com>

        * modules/AutomakeWorkspaceCreator.pm: Fixed string writing to write
          a tab to the generated file where desired, not a '\t'.

Tue Jun  8 12:29:19 2004  Steve Huston  <shuston@riverace.com>

        * modules/AutomakeWorkspaceCreator.pm (write_comps): Get automake
          trees to generate. It now relies on this scheme:
          * Each project goes in its own Makefile.<project>.am file (this is
            not a change from previous versions).